--- a/comentarios.html
+++ b/comentarios.html
@@ -31,7 +31,21 @@
     </section>
 
     <footer>
-        <!-- Seu código do footer aqui -->
-    </footer>
+        <img style="object-fit:contain;" id="logo" src="./.8effa27bae9ed0e24a77a68636736e62.png">
+        <span> Todos os direitos autorais reservados © </span>    
+        <span> Desenvolvido por : Henrique C. Albuquerque</span>    
+       </footer>
+       <nav class="footer-nav">
+           <ul class="footer-list">
+               <a href="./index.html"><li>Home</li>
+               </a>
+               <a href="./contatos.html"><li>Contatos</li> 
+               </a>
+               <a href="./fotos.html"><li>Fotos</li>
+               </a>
+               <a href="./comentarios.html"><li>Comentarios</li>
+               </a>       
+           </ul>
+       </nav>
 </body>
 </html>
