--- a/contatos.html
+++ b/contatos.html
@@ -1,11 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
+</html><!DOCTYPE html>
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Página de Comentários</title>
+    <link rel="stylesheet" href="comentarios.css">
 </head>
 <body>
-    Contatos
+    <header>
+        <img id="logo" src="./.8effa27bae9ed0e24a77a68636736e62.png">
+        <nav>
+            <ul>
+                <a href="./index.html"><li>Home</li>
+                </a>
+                <a href="./contatos.html"><li>Contatos</li> 
+                </a>
+                <a href="./fotos.html"><li>Fotos</li>
+                </a>
+                <a href="./comentarios.html"><li>Comentarios</li>
+                </a>       
+            </ul>
+        </nav>
+    </header> 
+    <section id="comment-section">
+        <div class="comment-box">
+            <h2>Deixe seu contato
+            </h2>
+            <textarea id="comment" rows="5" placeholder="Deixe seu contato para falarmos com você..."></textarea>
+            <button class="button" id="submit-btn">Enviar contato</button>
+        </div>
+    </section>
+    <footer>
+        <img style="object-fit:contain;" id="logo" src="./.8effa27bae9ed0e24a77a68636736e62.png">
+        <span> Todos os direitos autorais reservados © </span>    
+        <span> Desenvolvido por : Henrique C. Albuquerque</span>    
+       </footer>
+       <nav class="footer-nav">
+           <ul class="footer-list">
+               <a href="./index.html"><li>Home</li>
+               </a>
+               <a href="./contatos.html"><li>Contatos</li> 
+               </a>
+               <a href="./fotos.html"><li>Fotos</li>
+               </a>
+               <a href="./comentarios.html"><li>Comentarios</li>
+               </a>       
+           </ul>
+       </nav>
 </body>
 </html>
