--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             </nav>
       </header>
 <div id="banner"> </div>
-
+<div>
+    <h1>BOM DIA </h1>
+</div>
 <div id="trailer-conteiner">
     <div class="content">
         <video controls class="trailer" src="./videoplayback.mp4" type="video/mp4" > 
